test/testdata/functions/anonymous/missing_2_args_error.lox
var add = fun(a, b) {
  print a + b;
};

add(); // error: (anonymous)() missing 2 arguments: a and b
